Reverted back to using overflow-y: auto on the .main class, because it is necessary for the parallax effect, even though using it results in the fixed constructed navbar covering part of the scrollbar.

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -28,16 +28,22 @@ a {
 
 body {
   background-color: $quinary-color; // override Bootstrap setting
+  // overflow-x: hidden;
+  // overflow-y: auto;
+  // perspective: 1px;
+  // transform-style: preserve-3d;
 }
 
 html {
   box-sizing: border-box;
   font-family: Kozuka Gothic Pr6N, Segoe UI, Arial, Verdana;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 .main {  
   height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto; // necessary for parallax but causes fixed nav to cover scrollbar
   perspective: 1px;
+  scroll-behavior: smooth;
 }
